# neo

./: .clang-tidy  .gitignore  .pre-commit-config.yaml  CMakeLists.txt
.github/workflows/: build.yml  pip.yml  pre-commit.yml
cmake/: compiler_warnings.cmake
doc/: convolution.md
extra/benchmark/: CMakeLists.txt  plot.py
extra/benchmark/src/: biquad.cpp  fft.cpp  fixed_point.cpp  multi_batch.hpp  multiply_add.cpp  rfft.cpp  simd_fft.cpp
extra/cli/: CMakeLists.txt
extra/cli/src/: main.cpp  wav.cpp  wav.hpp
extra/coverage/: coverage.sh  gcc-coverage.sh  llvm-coverage.sh
extra/plugin/: CMakeLists.txt
extra/plugin/src/: PluginProcessor.cpp
extra/plugin/src/dsp/: AudioBuffer.hpp  AudioFile.cpp  DenseConvolution.cpp  DenseConvolution.hpp  (+1 more)
extra/python/: CMakeLists.txt
extra/python/src/: main.cpp
extra/snippet/: dct.py  optimizer.cpp  radix4.cpp  rfft.cpp  split_fft.cpp  split_radix.cpp  stockham.cpp
src/: CMakeLists.txt
src/neo/: algorithm.hpp  bit.hpp  simd_test.cpp
src/neo/algorithm/: allclose_test.cpp  allmatch_test.cpp  copy.hpp  copy_test.cpp  mean_squared_error_test.cpp  mean_test.cpp  multiply_add.hpp  multiply_add_test.cpp  normalize_energy_test.cpp  standard_deviation_test.cpp  variance_test.cpp
src/neo/bit/: bit_ceil.hpp
src/neo/complex/: scalar_complex_test.cpp  split_complex_test.cpp
src/neo/config/: xsimd.hpp
src/neo/container/: csr_matrix.hpp  mdspan.hpp
src/neo/convolution/: compressed_fdl.hpp  direct_convolve.hpp  direct_convolve_test.cpp  fft_convolver.hpp  fft_convolver_test.cpp  normalize_impulse_test.cpp  overlap_add.hpp  overlap_save.hpp  overlap_test.cpp  uniform_partition.hpp  uniform_partitioned_convolver.hpp  uniform_partitioned_convolver_test.cpp
src/neo/fft/: dct.hpp  dct_test.cpp  dft_test.cpp  fft_test.cpp  order.hpp  rfft.hpp  rfft_test.cpp  split_fft_test.cpp  stft.hpp  twiddle.hpp
src/neo/fixed_point/: algorithm.hpp  fixed_point_test.cpp  simd.hpp
src/neo/math/: a_weighting.hpp  abs.hpp  conj.hpp  fast_math.hpp  imag.hpp  imag_test.cpp  ipow.hpp  ipow_test.cpp  log2.hpp  polar.hpp  real.hpp  real_test.cpp  windowing.hpp  windowing_test.cpp
src/neo/simd/: avx.hpp  neon.hpp  sse2.hpp
src/neo/testing/: testing.hpp
src/neo/unit/: mel_test.cpp
test/: CMakeLists.txt
(+21 files in other folders)
